--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,1 +1,12 @@
---- {}
+---
+
+samba::share_path: '/var/data'
+samba::share_name: 'share'
+samba::share_description: 'Samba Share'
+samba::share_read_only: 'no'
+samba::share_inherit_permissions: 'yes'
+samba::server_log_path: '/var/log/samba/%m'
+samba::server_log_level: 1
+samba::server_role: 'standalone server'
+samba::share_permissions: '0755'
+samba::smb_config_location: '/etc/samba/smb.conf'
